--- a/resto/.env.travis
+++ b/resto/.env.travis
@@ -3,12 +3,12 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=127.0.0.1
-DB_DATABASE=resto
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=resto_test
+DB_USERNAME=root
+DB_PASSWORD=
 
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=array
+SESSION_DRIVER=array
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
