--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ before_script:
   - composer install --no-interaction
 
 script:
+  - vendor/bin/phpcs --standard=PSR1,PSR2 app/
   - vendor/bin/phpunit
+  - vendor/bin/phploc app/
