--- a/resto/.env.example
+++ b/resto/.env.example
@@ -15,9 +15,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=mandrill
+MANDRILL_SECRET=HSQOwg65NIMrrm8nx50CFA
+
+BASE_URL=resto-presto.local
+ADMIN_EMAIL=j.muschalle@gmail.com
